--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Hello</title>
-  </head>
-  <body>
-    <h1>Hello</h1>
-  </body>
+<head>
+  <title>JS Test</title>
+</head>
+<body>
+
+<h2 id="msg">Click the button</h2>
+
+<button onclick="sayHello()">Click me</button>
+
+<script src="script.js"></script>
+</body>
 </html>
