--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
+    *{
+      box-sizing:border-box;
+    }
+
     body{
       margin:0;
       font-family: Arial, sans-serif;
@@ -13,15 +17,46 @@
       color:#111;
     }
 
-    header{
+    /* ===== TOP BAR ===== */
+    .topbar{
+      position:sticky;
+      top:0;
+      z-index:100;
       background:#0b1220;
-      color:#fff;
-      padding:18px;
-      text-align:center;
-      font-size:22px;
-      font-weight:bold;
+      padding:10px;
+      display:flex;
+      align-items:center;
+      gap:10px;
     }
 
+    .logo{
+      color:#fff;
+      font-weight:bold;
+      font-size:18px;
+      white-space:nowrap;
+    }
+
+    .search{
+      flex:1;
+    }
+
+    .search input{
+      width:100%;
+      padding:8px 12px;
+      border-radius:4px;
+      border:none;
+      outline:none;
+      font-size:14px;
+    }
+
+    .menu{
+      color:#fff;
+      font-size:22px;
+      cursor:pointer;
+      padding:4px 8px;
+    }
+
+    /* ===== CONTENT ===== */
     .container{
       max-width:900px;
       margin:auto;
@@ -59,6 +94,7 @@
 
     h2{
       margin:10px 0;
+      font-size:20px;
     }
 
     .meta{
@@ -93,10 +129,18 @@
 
 <body>
 
-<header>
-  ANIME TAMIL HUB
-</header>
+<!-- ===== TOP BAR ===== -->
+<div class="topbar">
+  <div class="logo">ANIME TAMIL HUB</div>
 
+  <div class="search">
+    <input type="text" placeholder="Search anime, movies...">
+  </div>
+
+  <div class="menu">☰</div>
+</div>
+
+<!-- ===== CONTENT ===== -->
 <div class="container">
 
   <div class="card">
@@ -113,8 +157,8 @@
       </p>
 
       <p>
-        A fantasy adventure where a simple man enters a strange new world
-        and survives using skills, luck, and common sense.
+        A fantasy adventure anime where survival depends on wit,
+        skills, and unexpected luck.
       </p>
 
       <a href="#" class="btn">READ MORE</a>
